A smattering of changes.

--- a/software/usb_ir/AUTHORS
+++ b/software/usb_ir/AUTHORS
@@ -1,8 +1,8 @@
 This device and driver brought to you by Iguanaworks Inc.
   "Dirty and wrong, but for valid technical reasons."
 
-Linux driver and tools:
+Linux driver, tools, and recent firmware:
   Joseph Dunn <jdunn@iguanaworks.net>
 
-Device firmware:
+Original device firmware:
   Brian Shucker <shucker@iguanaworks.net>
