--- a/software/usb_ir/packaging/debian/changelog
+++ b/software/usb_ir/packaging/debian/changelog
@@ -1,3 +1,16 @@
+iguanair (0.98.1-3) unstable; urgency=low
+
+  * Test again
+
+
+ -- Ben Luey <bluey@iguanaworks.net>  Sat, 11 Oct 2008 10:24:40 -0600
+
+iguanair (0.98.1-2) unstable; urgency=low
+
+  * Devel version of firmware
+
+ -- Ben Luey <bluey@iguanaworks.net>  Tue, 07 Oct 2008 23:34:28 -0600
+
 iguanair (0.98.1-1) unstable; urgency=low
 
   * Upgrade to the 0.98 source.
