--- a/software/usb_ir/packaging/debian/changelog
+++ b/software/usb_ir/packaging/debian/changelog
@@ -1,3 +1,9 @@
+iguanair (1.0pre1) jaunty; urgency=low
+
+  * Pre Release of 1.0.
+
+ -- Ben Luey <bluey@iguanaDev>  Sun, 12 Jul 2009 18:07:25 -0400
+
 iguanair (0.99.1-4ubuntu1) gutsy; urgency=low
 
   * 0.99 IguanaWorks Release
