Updating changelog to be from Iguanaworks Support (support@iguanaworks.net) for 1.0.4 release

--- a/software/usb_ir/packaging/debian/changelog
+++ b/software/usb_ir/packaging/debian/changelog
@@ -3,7 +3,7 @@ iguanair (1.0.4-1) stable; urgency=low
   * 1.0.4 Iguanaworks Release
   * Various packaging improvement to be standards compliant.
 
- -- Ben Luey <bluey@Hello.benhome.com>  Sun, 13 Jan 2013 15:00:14 -0700
+ -- Iguanaworks Support <support@iguanaworks.net>  Sun, 13 Jan 2013 15:00:14 -0700
 
 iguanair (1.0.3-1ubuntu1) precise; urgency=low
 
