--- a/software/usb_ir/packaging/debian/changelog
+++ b/software/usb_ir/packaging/debian/changelog
@@ -1,6 +1,8 @@
 iguanair (1.1.0) stable; urgency=low
 
-  *  Switched from autoconf to cmake
+  * Switched from autoconf to cmake
+  * Added a device reboot in reflasher
+  * svn version numbers built into the executables
 
  -- Iguanaworks Support <support@iguanaworks.net>  Sun, 10 Mar 2013 13:28:28 -0600
 
