Update supported versions. Change author to match ppa signing name.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 Version: 1.2.0
-Author:  Iguanaworks Support <support@iguanaworks.net>
+Author:  Iguanaworks <support@iguanaworks.net>
 When:    Sat, 29 Jul 2017 14:22:28 -0600
 Debian:  zesty, 1
 Fedora:  1
